<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="activity"
            type="com.example.noteappsfinal.activity.DetailActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/headerDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_detail"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_title_note_text_view"
            style="@style/TextInputLayoutBoxColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_title"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:text="@string/title"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_note_description_text_view"
            style="@style/TextInputLayoutBoxColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_description"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:text="@string/description"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:onClick="editData"
                android:padding="@dimen/_16sdp"
                android:text="@string/edit"
                android:textSize="15dp"
                android:textColor="@color/textColor" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:onClick="deleteData"
                android:padding="@dimen/_16sdp"
                android:text="@string/delete"
                android:textSize="15dp"
                android:textColor="@color/textColor" />
        </LinearLayout>
    </LinearLayout>
</layout>